<resources>
    <string name="app_name">Tutr</string>
    <string name="Logo">Logo</string>
    <string name="Account_Name">Email</string>
    <string name="Password">Password</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="DNI">Do not identify</string>
    <string name="Submit">Submit</string>
    <string name="Login">Login</string>
    <string name="CAA">Create An Account</string>
    <string name="Account">Do not have an account yet?</string>
    <string name="Register"><u>Register now!!</u></string>
    <string name= "enter_contact_information">Enter contact information</string>
    <string name="enter_occupation_or_school_name">Enter occupation or school name</string>
    <string name="tell_us_about_yourself">Tell us about yourself!</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="Ratings">Ratings</string>
    <string name="Matching">Matching</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Chat_TextView_Hint">Messages appear here</string>
    <string name="editTextMessage_Hint">Type here</string>
    <string name="Profile_Picture">Profile Picture</string>
    <string name="Nav_Drawer_Header_Text">Tutoring Sessions</string>
    <string name="Default_Username_Text">Username</string>
    <string name="menu_item_settings">Settings</string>
    <string name="end_session">End Session</string>
    <string name="end_session_popup_title">Are you sure you would like to end this tutoring session?</string>
    <string name="survey_title">Please provide feedback on your session so we can improve your experience!</string>
    <string name="menu_item_logout">Log Out</string>
    <string name="chats">Chats</string>
    <string name="questions">Question</string>
    <string name="description">Description</string>
    <string name="area_of_expertise">Areas of Expertise</string>
    <string name="contact_info">Contact Information</string>
    <string name="questions_asked_tab_title">Questions</string>
    <string name="major_subject"> Major Subject</string>
    <string name="minor_subject"> Minor Subject</string>
    <string name="elaborate_on_question"> Elaborate on your question</string>
    <string name="profile">Profile</string>
    <string name="Schedule">Schedule</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="popup_greeting">Need Help?\n Ask a question and we\'ll provide you with a list of certified professionals!</string>
    <string name="list_of_tutors">List of Certified Tutors</string>
    <string name="Bio">Bio</string>
    <string name="Send">Send</string>
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="School">School / Occupation</string>
    <string name="Student">Student</string>
    <string name="Educator">Tutor</string>
    <string name="RegisterButton">Register</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Availability">Availability:  </string>
    <string name="Disagree">Disagree</string>
    <string name="Slightly_Agree">Slightly Agree</string>
    <string name="Agree">Agree</string>
    <string name="Strongly_Agree">Strongly Agree</string>
    <string name="survey_on_topic">My tutor stayed on topic</string>
    <string name="survey_answered_material">My tutor was able to properly answer my question</string>
    <string name="survey_friendly">My tutor was friendly</string>
    <string name="survey_overall">I had a great experience overall</string>
    <string name="comments">Comments</string>
    <string name="focused">Focused</string>
    <string name="accurate">Accurate</string>
    <string name="friendly">Friendly</string>
    <string name="completed_surveys">Completed Surveys</string>
    <string name="waiting_for_tutor_response">Waiting for the tutor\'s response</string>
    <string name="Resume">Resume(PDF)</string>
    <string name="total_session_time">Total Session Time:</string>
    <string name="match">Match</string>
    <string name="view_options">View Options</string>
    <string name="Online">Available Now</string>
    <string name="Schedule_app">Schedule Appointment</string>
    <string name="Available">Availability this week</string>
    <string name="tutoring_requests">Tutoring Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="conversation_list_menu_description">View conversation List</string>
    <string name="start_canvas_activity">Start canvas screen</string>
    <string name="paint_title">Paint</string>



    <string-array name="App">
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>5:30 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
        <item>9:00 PM</item>
        <item>9:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item>11:00 PM</item>
        <item>11:30 PM</item>
        <item>12:00 AM</item>
    </string-array>

    <string-array name="Time">
        <item>Anytime</item>
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>5:30 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
        <item>9:00 PM</item>
        <item>9:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item>11:00 PM</item>
        <item>11:30 PM</item>
        <item>12:00 AM</item>
    </string-array>

    <string-array name="Subjects">
        <item>English</item>
        <item>Math</item>
        <item>Science</item>
        <item>Social Studies</item>
        <item>Foreign Language</item>
    </string-array>

    <string-array name="English">
        <item>Grammar</item>
        <item>Poetry</item>
        <item>Journalism</item>
        <item>Public Speaking</item>
        <item>Theatre</item>
        <item>Creative writing</item>
        <item>Other</item>
    </string-array>

    <string-array name="Math">
        <item>Algebra</item>
        <item>Trigonometry</item>
        <item>Geometry</item>
        <item>Calculus</item>
        <item>Accounting</item>
        <item>Other</item>
    </string-array>

    <string-array name="Science">
        <item>Information Systems</item>
        <item>Biology</item>
        <item>Anatomy</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Meteorology</item>
        <item>Ecology</item>
        <item>Medicine</item>
        <item>Other</item>
    </string-array>

    <string-array name="Social_Studies">
        <item>Prehistoric</item>
        <item>Pre-800s</item>
        <item>Pre-1100s</item>
        <item>Pre-1400s</item>
        <item>Pre-1600s</item>
        <item>Pre-1800s</item>
        <item>Pre-1900s</item>
        <item>Current</item>
        <item>Other</item>
    </string-array>

    <string-array name="Foreign_Language">
        <item>Spanish</item>
        <item>Italian</item>
        <item>French</item>
        <item>Chinese</item>
        <item>Arabic</item>
        <item>Japanese</item>
        <item>German</item>
        <item>Russian</item>
        <item>Other</item>
    </string-array>

    <string-array name="Subscription">
        <item>1 Month $9.99</item>
        <item>3 Months $20.99</item>
        <item>6 Months $35.99</item>
    </string-array>

    <string-array name="Payment">
        <item>Credit Card</item>
        <item>Paypal</item>
    </string-array>
    <string-array name="AdminOptions">
        <item>View tutors</item>
        <item>View students</item>
        <item>View chat logs</item>
    </string-array>
</resources>
