<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/end_session_popup_title"/>
    <Button
        android:id="@+id/final_end_session_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/alert_title"
        android:text="@string/end_session"/>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:layout_below="@id/alert_title"
        android:layout_margin="30dp"
        android:padding="10dp"
       android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/Cancel"/>

</RelativeLayout>