<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/survey_title"/>

    <TextView
        android:id="@+id/focused_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@+id/title"
        android:text="@string/survey_on_topic"/>
    <RadioGroup
        android:id="@+id/focused_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/focused_text"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/focused_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Disagree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/focused_slightly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Slightly_Agree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/focused_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Agree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/focused_strongly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Strongly_Agree"
            android:layout_margin="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/accurate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/focused_group"
        android:textStyle="bold"
        android:text="@string/survey_answered_material"/>
    <RadioGroup
        android:id="@+id/accurate_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/accurate_text"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/accurate_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:text="@string/Disagree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/accurate_slightly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:text="@string/Slightly_Agree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/accurate_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:text="@string/Agree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/accurate_strongly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:text="@string/Strongly_Agree"
            android:layout_margin="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/friendly_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accurate_group"
        android:textStyle="bold"
        android:text="@string/survey_friendly"/>
    <RadioGroup
        android:id="@+id/friendly_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/friendly_text"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/friendly_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Disagree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/friendly_slightly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Slightly_Agree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/friendly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Agree"
            android:layout_margin="10dp"/>
        <RadioButton
            android:id="@+id/friendly_strongly_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Strongly_Agree"
            android:layout_margin="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/comments_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:layout_below="@id/friendly_group"/>
    <EditText
        android:id="@+id/comments_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comments_text_view"
        android:hint="@string/editTextMessage_Hint"
        android:maxLength="233"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:layout_below="@id/comments_edit_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>