<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/CAA"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/CAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="229dp"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toTopOf="@+id/T_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/E_Email"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/T_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_Email" />

    <TextView
        android:id="@+id/T_Email"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/Account_Name"
        android:textSize="36sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/E_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <TextView
        android:id="@+id/T_Password"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/E_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E_Email" />

    <EditText
        android:id="@+id/E_Password"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_Password" />

    <Button
        android:id="@+id/Login"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E_Password" />

</androidx.constraintlayout.widget.ConstraintLayout>